k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orders-backend
  labels:
    istio-injection: enabled
